syntax = "proto3";
package utility;

option go_package = "github.com/pokt-network/pocket/utility/types";

import "google/protobuf/any.proto";
import "core/types/proto/actor.proto";

message MessageSend {
  bytes from_address = 1;
  bytes to_address = 2;
  string amount = 3;
}

message MessageStake {
  core.ActorType actor_type = 1;
  bytes public_key = 2;
  repeated string chains = 3;
  string amount = 4;
  string service_url = 5;
  bytes output_address = 6;
  optional bytes signer = 7;
}

message MessageEditStake {
  core.ActorType actor_type = 1;
  bytes address = 2;
  repeated string chains = 3;
  string amount = 4;
  string service_url = 5;
  optional bytes signer = 6;
}

message MessageUnstake {
  core.ActorType actor_type = 1;
  bytes address = 2;
  optional bytes signer = 3;
}

message MessageUnpause {
  core.ActorType actor_type = 1;
  bytes address = 2;
  optional bytes signer = 3;
}

message MessageChangeParameter {
  bytes signer = 1;
  bytes owner = 2;
  string parameter_key = 3;
  google.protobuf.Any parameter_value = 4;
}

message MessageDoubleSign {
  utility.LegacyVote vote_a = 1;
  utility.LegacyVote vote_b = 2;
  optional bytes reporter_address = 3;
}

// TECHDEBT: Consolidate this with consensus
message LegacyVote {
  bytes public_key = 1;
  int64 height = 2;
  uint32 round = 3;
  uint32 type = 4;
  bytes block_hash = 5;
}